Fix avatar and user name alignment

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -40,6 +40,7 @@ header {
 }
 
 .user-avatar-name {
+  align-self: center;
   padding: 0 5px 0 5px
 }
 
